--- a/weekly_task/the_odin_project/pages/allpaths.html
+++ b/weekly_task/the_odin_project/pages/allpaths.html
@@ -27,16 +27,16 @@
                         <a class="nav-link" href="#">All Paths</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/about.html">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/community.html">Community</a>
+                        <a class="nav-link" href="./community.html">Community</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/supportus.html">Support Us</a>
+                        <a class="nav-link" href="./supportus.html">Support Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/signin.html">Sign In</a>
+                        <a class="nav-link" href="./signin.html">Sign In</a>
                     </li>
                     <li class="nav-item">
                         <a><img src="../images/lightmode.png" alt="" style="width: 25px; margin-top: 8px; margin-right: 20px; margin-left: 10px;"></a>
@@ -59,8 +59,7 @@
             <div class="row no-gutters">
                 <div class="col-12 d-flex justify-content-center align-items-center flex-row">
                     <img src="../images/about/badge-foundations-fc89cdc6.svg....1.svg" class="img-fluid p-4 " alt="Foundations Logo">
-                    <h2 class="card-title display-6 mr-5">Foundations</h2> 
-                    <a href="#" class="btn btn-dark ml-auto mr-3">Explore</a>
+                    <h2 class="card-title display-6 mr-5">Foundations</h2>
                 </div>
     
                 <div class="col-12">
