--- a/weekly_task/the_odin_project/pages/about.html
+++ b/weekly_task/the_odin_project/pages/about.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">All Paths</a>
+                        <a class="nav-link" href="../pages/allpaths.html">All Paths</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/about.html">About</a>
