--- a/weekly_task/sempakam/index.html
+++ b/weekly_task/sempakam/index.html
@@ -63,9 +63,176 @@
             <li><button>SHOP NOW</button></li>
             <li><button>DISCOUNT SALE</button></li>
         </ul>
-        
     </div>
     </div>
-
+    <!-- container3 -->
+<div class="container3">
+    <div class="c3child"><img src="./images/Inner-Jacket-ch.webp" alt="">inner jacket</div>
+    <div class="c3child"><img src="./images/Kids-ch.webp" alt="">kids</div>
+    <div class="c3child"><img src="./images/Kurtas-ch.webp" alt="">kurtas</div>
+    <div class="c3child"><img src="./images/Party-wear-ch.webp" alt="">party wear</div>
+    <div class="c3child"><img src="./images/sale-ch.webp" alt="">traditional</div>
+    <div class="c3child"><img src="./images/Saree-ch.webp" alt="">saree</div>
+    <div class="c3child"><img src="./images/Stitching-ch.webp" alt="">stiching</div>
+    <div class="c3child"><img src="./images/Unstitched-sets-ch.webp" alt="">unstched sets</div>
+    <div class="c3child"><img src="./images/Wedding-ch.webp" alt="">wedding</div>
+</div>
+<!-- container4 -->
+ <div class="container4">
+    <h1>Best Selling Products</h1>
+ </div>
+<!-- container5 -->
+ <div class="container5">
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5CTE060506A.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORD230401.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE021606.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE030127-.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE030411.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE031517B-scaled.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE081018.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE032510-.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+ </div>
+ <!-- container6 -->
+  <div class="container6">
+    <div class="c6child1"><button>Browse more products </button></div>
+    <div class="c6child2"><h2>NEW ARRIVAL</h2></div>
+  </div>
+  <!-- container7 -->
+  <div class="container5">
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5CTE060506A.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORD230401.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE021606.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE030127-.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE030411.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE031517B-scaled.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE081018.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+    <div class="c5child">
+        <div class="c5child1"><img src="./images/c5ORE032510-.webp" alt=""></div>
+        <div class="c5child2"><div class="c5d2">original cotton kota top,pure cotton cotta dupta</div><div class="c5d3"><img src="./images/favorite_24dp_B7B7B7_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div></div>
+        <div class="c5child3"><div class="c5d4"><b>₹2,500.00</b></div>
+            <div class="c5d5"><button>add to cart</button></div>
+        </div>
+    </div>
+ </div>
+ <!-- container8 -->
+ <div class="container6">
+    <div class="c6child1"><button>Browse more products </button></div>
+  </div>
+  <!-- FOOTER -->
+  <div class="footer">
+    <div class="ftr1"><img src="./images/Screenshot 2024-09-30 000936.png" alt=""></div>
+    <div class="ftr2">
+        <div class="fchild1"><b>SOLUTION</b></div>
+        <div class="fchild2"><B>ABOUT US</B></div>
+        <div class="fchild5"></div>
+        <div class="fchild5"></div>
+        <div class="fchild3">my account</div>
+        <div class="fchild4">contact us</div>
+        <div class="fchild5">Track Your Order</div>
+        <div class="fchild5">Terms & Conditions</div>
+        <div class="fchild5">Order History</div>
+        <div class="fchild5">Privacy Policy</div>
+        <div class="fchild5">Payment Methods</div>
+        <div class="fchild5">Return Policy</div>
+        <div class="fchild5">Privacy Policy</div>
+        <div class="fchild5">Site Map</div>  
+    </div>
+    <div class="ftr3">
+        <div class="ftr3c1"><b>CONTACT US</b></div>
+        <div class="ftr3c2"><img src="./images/location_on_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="">  Kureekkadu, Ernakulam, Kerala</div>
+        <div class="ftr3c3"><img src="./images/call_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> +91-86065 70657</div>
+        <div class="ftr3c4"><img src="./images/schedule_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Mon - Sat / 9:00AM - 6:00PM</div>
+    </div>
+  </div>
 </body>
 </html>
