--- a/weekly_task/sempakam/index.html
+++ b/weekly_task/sempakam/index.html
@@ -11,7 +11,7 @@
     <!-- container1 -->
     <div class="container1"></div>                                                           
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg "style="background-color: rgb(46, 46, 46);">
+    <nav class="navbar navbar-expand-lg "style="position:sticky; top:0; z-index: 1; background-color: rgb(46, 46, 46);">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" alt="sempakam" style="width: 17vw; ;">
