--- a/weekly_task/sempakam/index.html
+++ b/weekly_task/sempakam/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- container1 -->
-    <div class="container1"></div>                                                           
+    <div class="container1">C H E M P A K A M</div>                                                        
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg "style="position:sticky; top:0; z-index: 1; background-color: rgb(46, 46, 46);">
         <div class="container">
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#" style="margin-left: 8vw; color: white; margin-bottom: 20px;">shop now</a>
+                        <a class="nav-link" href="#" style="margin-left: 8vw; color: white; margin-bottom: 20px;">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style="margin-left: 20px; color: white;">Reviews</a>
+                        <a class="nav-link" href="#" style="margin-left: 20px; color: white;">Shop now</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"style="margin-left: 20px; color: white;">About us</a>
+                        <a class="nav-link" href="./pages/aboutus.html"style="margin-left: 20px; color: white;">About us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"style="margin-left: 20px; color: white;">Contact us</a>
@@ -54,7 +54,7 @@
     </nav>
     <!-- container2 -->
     <div class="conatiner2">
-        <img class="c2img" src="./images/ornate-silk-dress-with-intricate-embroidery-design-generated-by-ai.jpg" alt="">
+        <img class="c2img" src="./images/main.png" alt="">
         <div class="c2div">
         <p>Welcome to</p>
         <img src="./images/chempakam-logo-e1648124235657c2.png" alt="">
