--- a/weekly_task/sempakam/index.html
+++ b/weekly_task/sempakam/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="./pages/aboutus.html"style="margin-left: 20px; color: white;">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"style="margin-left: 20px; color: white;">Contact us</a>
+                        <a class="nav-link" href="./pages/contack.html"style="margin-left: 20px; color: white;">Contact us</a>
                     </li>
                     <li class="nav-item">
                         <input type="text" placeholder="Product code            |" style="margin-left: 20px;background-color: rgb(46, 46, 46); border:1px solid grey;height: 30px;  margin-top: 8px;">
