--- a/weekly_task/croma/index.html
+++ b/weekly_task/croma/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>C R O M A </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: black;">
-    <nav class="navbar navbar-expand-lg navbar container" style="background-color: black;">
+    <nav class="navbar navbar-expand-lg navbar container" style="background-color: black; height: 15vh;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./images/Croma_Logo_acrkvn.svg" alt="Croma Logo" class="img-fluid"></a>
             <!-- Toggler for mobile screens -->
@@ -107,28 +107,28 @@
         </div>
         <div class="carousel-inner ">
           <div class="carousel-item active">
-            <img src="./images/caro.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (1).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro1.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (2).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro3.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (3).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (4).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro1.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (1).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro3.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (2).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro1.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (3).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/caro3.jpg" class="d-block w-100" alt="...">
+            <img src="./images/c1 (4).png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -140,6 +140,144 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <!-- container2 -->
+       <div class="container container2">
+        <div class="c2childs"><img src="./images/Accessories_ze7rv0.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Air_Conditioner_och9pb.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Geyser_yitnno.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Headphones_and_Earphones_kykzc8.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Kitchen_Appliances_kqirq1.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Laptops_rpvdib.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Mobile_trioxb.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Refrigerators_o604ev.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Televisions_atxydz.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Washing_machines_gurvdv.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Water_Purifier_mu1cmz.webp" alt=""></div>
+        <div class="c2childs"><img src="./images/Wearable_advgcr.webp" alt=""></div>
+       </div>
+
+       <!-- container3 -->
+       <div class="container mt-5 mb-5">
+        <div class="row g-4">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <img src="./images/c3 (1).png" alt="" class="img-fluid rounded">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <img src="./images/c3 (2).png" alt="" class="img-fluid rounded">
+            </div>
+        </div>
+    </div>
+
+    <!-- container4 -->
+     <div class="container text-start text-light mt-3 mb-5">
+     <h4>Exiting bank offers for you</h4>
+     <div class="col">
+      <img src="./images/c4.png" alt="" class="img-fluid rounded">
+     </div>
+    </div>
+    <!-- container5 -->
+     <div class="container text-light">
+      <h4>what's hot</h4>
+      <div class="row g-4">
+        <div class="col-lg-3 col-md-6 col-sm-12"><img src="./images/c5 (1).png" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-3 col-md-6 col-sm-12"><img src="./images/c5 (2).png" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-3 col-md-6 col-sm-12"><img src="./images/c5 (3).png" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-3 col-md-6 col-sm-12"><img src="./images/c5 (4).png" alt="" class="img-fluid rounded"></div>
+
+      </div>
+     </div>
+
+     <!-- container6 -->
+      <div class="container text-light mt-5">
+        <h4>No More Worrying About Your Appliances</h4>
+        <div class="col mt ">
+          <img src="./images/c6.png" alt="" class="img-fluid rounded">
+        </div>
+      </div>
+      <!-- container7 -->
+      <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2000">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="carousel" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+        </div>
+        <div class="carousel-inner" style="margin-top: 20px;">
+            <div class="carousel-item active">
+                <img src="./images/c7 (1).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (2).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (3).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (4).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (1).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (2).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (3).png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/c7 (4).png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <!-- container 8 -->
+     <div class="container text-light mt-5">
+      <h4>Exclusively Curated For You</h4>
+      <div class="row mt-3">
+        <div class="col-lg-2 col-md-4 col-sm-2 "><img src="./images/c8.webp" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-2 col-md-4 col-sm-2 "><img src="./images/c81.webp" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-2 col-md-4 col-sm-2 "><img src="./images/c82.webp" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-2 col-md-4 col-sm-2 "><img src="./images/c83.webp" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-2 col-md-4 col-sm-2 "><img src="./images/c84.webp" alt="" class="img-fluid rounded"></div>
+        <div class="col-lg-2 col-md-4 col-sm-2 "><img src="./images/c85.webp" alt="" class="img-fluid rounded"></div>
+      </div>
+      </div>
+     </div>
+     <div class="container mt-5">
+      <div class="row">
+        <div class="col"><img src="./images/c8000 (1).png" alt="" class="img-fluid rounded"></div>
+        <div class="col"><img src="./images/c8000 (2).png" alt="" class="img-fluid rounded"></div>
+      </div>
+     </div>
+     <!-- container9 -->
+      <div class="container text-light mt-4">
+        <h4> why croma?</h4>
+        <div class="row mt-3">
+          <img src="./images/c9.png" alt="">
+        </div>
+      </div>
+      <!-- container10 -->
+       <div class="container mt-4">
+        <div class="row">
+          <div class="col-lg-2"><img src="./images/c10(1).webp" alt="" class="img-fluid rounded"></div>
+          <div class="col-lg-2"><img src="./images/c10(2).webp" alt="" class="img-fluid rounded"></div>
+          <div class="col-lg-2"><img src="./images/c10(3).webp" alt="" class="img-fluid rounded"></div>
+          <div class="col-lg-2"><img src="./images/c10(4).webp" alt="" class="img-fluid rounded"></div>
+          <div class="col-lg-2"><img src="./images/c10.webp" alt="" class="img-fluid rounded"></div>
+          <div class="col-lg-2"><img src="images/c(5).webp" alt="" class="img-fluid rounded"></div>
+        </div>
+       </div>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
