--- a/weekly_task/croma/index.html
+++ b/weekly_task/croma/index.html
@@ -29,14 +29,14 @@
             <a class="nav-link" href="javascript:void(0)"><input class="form-control me-2" type="text" placeholder="What are you looking for"style="width: 35vw;"></a>
           </li>
         </ul>
-        <form class="d-flex mb-4 ">
+        <form class="d-flex mb-4 me-4 ">
           <li class="nav-item">
               <a class="nav-link text-light me-3" href="#"><img src="./images/location_on_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg" alt="Location Icon" >kochi </a>
           </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"><img src="./images/person_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg" alt="User Icon"></a>
+          <li class="nav-item dropdown me-4">
+              <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"><img src="./images/person_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg" alt="User Icon"></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item me-4">
               <a class="nav-link" href="#"><img src="./images/shopping_cart_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg" alt="Cart Icon"></a>
           </li>
         </form>
